<resources>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="event_type">Event type</string>
    <string name="event_name">Event name</string>
    <string name="event_location">Event location</string>
    <string name="event_date">Event date</string>
    <string name="event_description">Event description</string>
    <string name="select_dates">Select dates</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="profile">profile</string>
    <string name="timeline">Timeline</string>
    <string name="favorites">Favorites</string>
    <string name="Maps">Maps</string>
    <string name="event">Events</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Edit">Edit</string>
    <string name="info">Info</string>
    <string name="dialog_update_eventName">Update an Event</string>
    <string name="dialog_update_eventLocation">Update the selected event</string>
    <string name="dialog_update_eventDate">Update a selected data from the database</string>
    <string name="dialog_update_eventDescription">Update a selected data from the database</string>
    <string name="dialog_update_eventType">Update a selected data from the database</string>
    <string name="button_update">Update</string>
    <string name="button_cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="dialog_delete_title">Delete Event</string>
    <string name="dialog_delete_message">Are you sure you want to delete this event?</string>
    <string name="network_error_message">Network error occurred. Please check your internet connection and try again.</string>
    <string name="auth_error_message">Authentication error occurred. Please sign in again.</string>
    <string name="storage_error_message">Storage error occurred. Please try again later.</string>
    <string name="generic_error_message">An error occurred. Please try again later.</string>
    <string name="event_deleted">Event deleted successfully.</string>
    <string name="saved_event">Saved event successfully</string>
    <string name="preference_file_key">dk.itu.moapd.copenhagenbuzz.astb.PREFERENCE_FILE_KEY</string>
    <string name="button_stop">stop\n</string>
    <string name="button_start">start</string>
    <string name="dialog_details_title">Event details</string>
    <string name="dialog_close">Close</string>
    <string name="search_bar">Search</string>
    <string name="logout">logout</string>
    <string name="image">image</string>
    <string name="search">Search event</string>
    <string name="end_date_format"> - %s</string>
    <string name="please_select">Please select photo</string>
    <string name="photo_select">Photo selected!</string>
    <string name="no_media">No media selected</string>
    <string name="fill_out_all">Please fill out all fields</string>
    <string name="only_copenhagen">Address not valid. Try again with an address in Copenhagen</string>
    <string name="user_not_logged_in">User is not logged in</string>
    <string name="cam_permission_denied">Camera permission denied</string>
    <string name="no_start_date">Start Date Unavailable</string>
    <string name="no_end_date">End Date Unavailable</string>
    <string name="no_dates">Dates Unavailable</string>




</resources>