<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/event_row_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/linear_layout_style"
        android:layout_margin="8dp"
        tools:ignore="MissingConstraints">

    <LinearLayout
        style="@style/linear_layout_style"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <!-- Title, secondary and supporting text -->



            <TextView
                android:id="@+id/event_name"
                style="@style/eventName_textView_style"
                android:text="@string/event_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/event_type"
                app:layout_constraintEnd_toStartOf="@+id/favorite_button"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:layout_marginStart="15dp"
                 />


            <TextView
                android:id="@+id/event_type"
                style="@style/textView_style"
                android:text="@string/event_type"
                app:layout_constraintTop_toBottomOf="@id/event_name"
                app:layout_constraintStart_toStartOf="@+id/event_name"
                />

            <CheckBox
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:button="@drawable/favorite_checkbox"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            style="@style/linear_layout_style"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:id="@+id/event_icon"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:scaleType="centerInside"
                />

            <TextView
                android:id="@+id/event_location"
                style="@style/textView_style"
                android:layout_marginTop="8dp"
                android:text="@string/event_location"
                android:textStyle="bold"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

            <LinearLayout
                style="@style/textView_style"
                android:orientation="horizontal"
                android:layout_gravity="start">

            <TextView
                android:id="@+id/start_date"
                style="@style/textView_style"
                android:layout_marginTop="5dp"
                android:text="@string/event_date"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/end_date"
                    style="@style/textView_style"
                    android:layout_marginTop="5dp"
                    android:text="@string/event_date"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <TextView
                android:id="@+id/event_description"
                style="@style/textView_style"
                android:layout_marginTop="16dp"
                android:text="@string/event_description"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

        <LinearLayout
            style="@style/textView_style"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_gravity="end">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/Delete"
                android:clickable="true"
                style="?attr/materialButtonOutlinedStyle"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/Edit"
                android:clickable="true"
                style="?attr/materialButtonOutlinedStyle"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/textView_style"
                android:text="@string/info"
                />
        </LinearLayout>


    </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>