<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EventFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="@+id/add_event_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/linear_layout_style"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_name"
                style="@style/event_input_field"
                android:hint="@string/event_name"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/baseline_festival_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_location"
                style="@style/event_input_field"
                android:hint="@string/event_location"
                app:layout_constraintTop_toBottomOf="@+id/text_field_event_name"
                app:startIconDrawable="@drawable/baseline_add_location_alt_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_date"
                style="@style/event_input_field"
                android:hint="@string/event_date"
                app:layout_constraintTop_toBottomOf="@+id/text_field_event_location"
                app:startIconDrawable="@drawable/baseline_calendar_month_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_type"
                style="@style/event_input_field"
                android:hint="@string/event_type"
                app:layout_constraintTop_toBottomOf="@+id/text_field_event_date"
                app:startIconDrawable="@drawable/baseline_celebration_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_event_description"
                style="@style/event_input_field"
                android:hint="@string/event_description"
                app:layout_constraintTop_toBottomOf="@+id/event_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>




            <ImageView
                android:id="@+id/event_photo"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@color/black"/>
            <ImageButton
                android:id="@+id/event_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_add_a_photo_24"/>
            <ImageButton
                android:id="@+id/event_photo_library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_add_a_photo_24"/>

            <ImageView
                android:id="@+id/event_photo_preview"
                android:layout_width="wrap_content"
                android:layout_height="128dp"
                app:layout_constraintTop_toBottomOf="@+id/button_take_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="image" />
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_event_button"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>